--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<html>
+  <head>
+    <title> Disktera Payment</title>
+    <body>
+      <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_OBTZmoZAw61Ach" async> </script> </form>
+    </body>
+  </head>
+</html>
